2009-04-03  Thomas Moulard  <thomas.moulard@gmail.com>

	Make configure detect solvers.
	* README: Document how to build a shared library from CFSQP.
	* TODO: Update, reorganize.
	* build-aux/acx_pthread.m4: New.
	* build-aux/autotest.mk: When configure is modified,
        regenerate testsuite.
	* build-aux/cfsqp.m4: New.
	* build-aux/ipopt.m4: New.
	* configure.ac: Add a soft dependency on Ipopt and CFSQP.
	* src/Makefile.am: Only build bridges for available solvers.
	* tests/Makefile.am,
	* tests/cfsqp.at,
	* tests/ipopt.at: Only test availables solvers.
	* tests/package.m4.in: Pass available solvers to test suite.
	* tests/testsuite.at: Fix documentation.

2009-04-02  Thomas Moulard  <thomas.moulard@gmail.com>

	Rename optimization-fwd.hh into fwd.hh, document.
	* src/Makefile.am: Rename fwd.
	* src/function.hh: Document.
	* src/fwd.hh: Rename from src/optimization-fwd.hh.
	* src/problem.hh,
	* src/solver.hh: Document.

2009-04-02  Thomas Moulard  <thomas.moulard@gmail.com>

	Enhance functions with scale and bounds easier to manage.
	* src/function.cc,
	* src/function.hh: Add scale, make bounds easier to handle.
	* src/ipopt.cc: Set bound multiplier to 1. for now.

2009-04-02  Thomas Moulard  <thomas.moulard@gmail.com>

	Update TODO.
	* TODO: Here.

2009-04-02  Thomas Moulard  <thomas.moulard@gmail.com>

	Add linearity tag to functions.
	* src/cfsqp.cc,
	* src/cfsqp.hh: Expose CFSQP iprint (verbosity) level.
	* src/function.cc,
	* src/function.hh: Add linearity tag.
	* src/ipopt.cc: Start handling linearity, put a dummy
        implementation of all Ipopt virtual methods.
	* tests/cfsqp.cc: Make test more verbose for now.

2009-04-01  Thomas Moulard  <thomas.moulard@gmail.com>

	Enhance CFSQP gradient handling.
	* src/cfsqp.cc: Fix gradob and implement gradcn.

2009-04-01  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix test suite.
	* tests/hs071.hh: Add missing bounds on constraints.
	* tests/ipopt.at: Test is passed now.
